// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BulkSelect should render correctly - no data 1`] = `
<Fragment>
  <Checkbox
    className="ins-c-bulk-select"
    id="undefined-checkbox"
    isChecked={false}
    isDisabled={false}
    isValid={true}
    onChange={[Function]}
  />
</Fragment>
`;

exports[`BulkSelect should render correctly - null checked 1`] = `
<Fragment>
  <Dropdown
    className="ins-c-bulk-select"
    dropdownItems={
      Array [
        <DropdownItem
          component="button"
          onClick={[Function]}
        >
          Select all
        </DropdownItem>,
      ]
    }
    isOpen={false}
    onSelect={[Function]}
    toggle={
      <DropdownToggle
        isDisabled={false}
        onToggle={[Function]}
        splitButtonItems={
          Array [
            <React.Fragment>
              <DropdownToggleCheckbox
                aria-label="Select all"
                className=""
                id="toggle-checkbox"
                isChecked={null}
                isDisabled={false}
                isValid={true}
                onChange={[Function]}
              >
                
              </DropdownToggleCheckbox>
            </React.Fragment>,
          ]
        }
      />
    }
  />
</Fragment>
`;

exports[`BulkSelect should render correctly 1`] = `
<Fragment>
  <Dropdown
    className="ins-c-bulk-select"
    dropdownItems={
      Array [
        <DropdownItem
          className="ins-c-bulk-select__selected"
          isDisabled={true}
        >
          30
           Selected
        </DropdownItem>,
        <DropdownItem
          component="button"
          onClick={[Function]}
        >
          Select all
        </DropdownItem>,
      ]
    }
    isOpen={false}
    onSelect={[Function]}
    toggle={
      <DropdownToggle
        isDisabled={false}
        onToggle={[Function]}
        splitButtonItems={
          Array [
            <React.Fragment>
              <DropdownToggleCheckbox
                aria-label="Select all"
                className=""
                id="some-id-toggle-checkbox"
                isChecked={false}
                isDisabled={false}
                isValid={true}
                onChange={[Function]}
              >
                30 selected
              </DropdownToggleCheckbox>
            </React.Fragment>,
          ]
        }
      />
    }
  />
</Fragment>
`;

exports[`BulkSelect should render correctly 2`] = `
<Fragment>
  <Dropdown
    className="ins-c-bulk-select"
    dropdownItems={
      Array [
        <DropdownItem
          component="button"
          onClick={[Function]}
        >
          Select all
        </DropdownItem>,
      ]
    }
    isOpen={false}
    onSelect={[Function]}
    toggle={
      <DropdownToggle
        isDisabled={false}
        onToggle={[Function]}
        splitButtonItems={
          Array [
            <React.Fragment>
              <DropdownToggleCheckbox
                aria-label="Select all"
                className=""
                id="toggle-checkbox"
                isChecked={false}
                isDisabled={false}
                isValid={true}
                onChange={[Function]}
              >
                
              </DropdownToggleCheckbox>
            </React.Fragment>,
          ]
        }
      />
    }
  />
</Fragment>
`;

exports[`BulkSelect should render custom props 1`] = `
<Fragment>
  <Dropdown
    className="ins-c-bulk-select"
    dropdownItems={
      Array [
        <DropdownItem
          component="button"
          isDisabled={true}
          onClick={[Function]}
        >
          Select none
        </DropdownItem>,
        <DropdownItem
          component="button"
          onClick={[Function]}
        >
          Select all
        </DropdownItem>,
      ]
    }
    isOpen={false}
    onSelect={[Function]}
    toggle={
      <DropdownToggle
        isDisabled={false}
        onToggle={[Function]}
        splitButtonItems={
          Array [
            <React.Fragment>
              <DropdownToggleCheckbox
                aria-label="Select all"
                className=""
                id="toggle-checkbox"
                isChecked={false}
                isDisabled={false}
                isValid={true}
                onChange={[Function]}
              >
                
              </DropdownToggleCheckbox>
            </React.Fragment>,
          ]
        }
      />
    }
  />
</Fragment>
`;
